--- a/testRmarkdown.Rmd
+++ b/testRmarkdown.Rmd
@@ -2,7 +2,9 @@
 title: "My first R Markdown"
 author: "dk"
 date: "7/3/2018"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
