--- a/testRmarkdown.Rmd
+++ b/testRmarkdown.Rmd
@@ -30,3 +30,11 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+## Dustin's Section
+
+Dustin is adding this random plot to make sure it works
+```{r}
+boxplot(airquality)
+```
+
